# wallet-manager

./: .env  Cargo.toml  README.md  docker-compose.yaml
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2024-11-28-205535_create_transactions/: up.sql
src/: main.rs
src/db/: db_session_manager.rs  mod.rs  schema.rs
src/models/: transaction.rs
src/server/: http_server.rs
src/server/endpoints/: mod.rs  transaction_route.rs  wallet_route.rs
